[FIX] mail: sub thread list hard to read
Before this commit, the sub thread list had two issues:

- It was too small, making it hard to grasp the content of the thread.
The last message of the thread was shown, but due to limited space, it
was often truncated so much that displaying it was not useful.

This commit slightly increases the width of the sub thread list and
adds the last message body as a title, displayed on hover.

--- a/addons/mail/static/src/discuss/core/common/action_panel.scss
+++ b/addons/mail/static/src/discuss/core/common/action_panel.scss
@@ -30,6 +30,11 @@
 
 .popover:has(.o-mail-ActionPanel-content) {
     width: Min(95vw, 400px);
+
+    &.o-mail-SubChannelList-panel {
+        width: Min(95vw, 500px);
+
+    }
 }
 
 .popover .o-mail-ActionPanel-content {
